# sertyp

./: .gitignore  README.md  lib.typ  typst.toml
rust/: Cargo.toml  README.md
rust/sertyp_macros/: Cargo.toml
rust/sertyp_macros/src/: lib.rs
rust/src/: lib.rs
rust/src/types/: alignment.rs  angle.rs  arguments.rs  array.rs  auto.rs  boolean.rs  bytes.rs  color.rs  content.rs  datetime.rs  decimal.rs  dictionary.rs  direction.rs  duration.rs  float.rs  fraction.rs  function.rs  generic.rs  gradient.rs  integer.rs  label.rs  length.rs  mod.rs  module.rs  none.rs  panic.rs  ratio.rs  regex.rs  relative.rs  selector.rs  string.rs  stroke.rs  styles.rs  symbol.rs  tiling.rs  type.rs  version.rs
rust/src/types/content/: h.rs  metadata.rs  mod.rs  raw.rs  sequence.rs  space.rs  stack.rs  strong.rs  symbol.rs  text.rs  v.rs
rust/src/types/content/math/: accent.rs  attach.rs  binom.rs  cancel.rs  cases.rs  class.rs  equation.rs  frac.rs  generic.rs  lr.rs  mat.rs  mod.rs  op.rs  primes.rs  root.rs  stretch.rs  styled.rs  vec.rs
rust/src/types/generic/: auto_or.rs  box.rs  mod.rs  or.rs  result.rs  typed_array.rs
test_plugin/: Cargo.toml  test.typ
test_plugin/src/: lib.rs
types/: alignment.typ  angle.typ  arguments.typ  array.typ  auto.typ  boolean.typ  bytes.typ  color.typ  content.typ  datetime.typ  decimal.typ  dictionary.typ  direction.typ  float.typ  fraction.typ  function.typ  generic.typ  gradient.typ  integer.typ  label.typ  length.typ  module.typ  none.typ  ratio.typ  regex.typ  selector.typ  string.typ  stroke.typ  styles.typ  symbol.typ  type.typ  version.typ
typst/: README.md  lib.typ
typst/types/: content.typ  function.typ
