[package]
name = "sertyp"
edition = "2024"
authors = ["Uhrendoktor"]
version = "0.1.1"
description = "Serialization and deserialization of most typst types into sertyp CBOR format: This includes markdown, math, etc."
license = "MIT"
repository = "https://github.com/Uhrendoktor/sertyp"
readme = "README.md"
keywords = ["wasm", "serialization", "deserialization", "typst"]
categories = ["encoding", "wasm", "api-bindings"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
