[workspace]
members = [
    ".",
    "./sertyp_macros",
]

[workspace.package]
edition = "2024"
authors = ["Uhrendoktor"]
version = "0.1.1"
license = "MIT"

[package]
name = "sertyp"
edition.workspace = true
authors.workspace = true
version.workspace = true
description = "Serialization and deserialization of most typst types into sertyp CBOR format: This includes markdown, math, etc."
license.workspace = true
repository = "https://github.com/Uhrendoktor/sertyp"
readme = "README.md"
keywords = ["wasm", "serialization", "deserialization", "typst"]
categories = ["encoding", "wasm", "api-bindings"]

[lib]
crate-type = ["lib"]

[features]
content = []

[dependencies]
paste = "1.0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
sertyp_macros = { path = "./sertyp_macros" }
